Add CCA logo to the home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Home Page</title>
     </head>
     <body>
+        <img src="ccalogo.png" alt="CCA Logo">
         <h1>Welcome to CCA</h1>
         <!-- <h2>Welcome to CCA</h2>
         <h3>Welcome to CCA</h3>
