Add contact page, video, and YouTube embed to the home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
+        <link rel="icon" href="ccalogo.png">
     </head>
     <body>
         <img src="ccalogo.png" alt="CCA Logo">
+        <!-- Video -->
+        <video width="320"  height="240" autoplay muted loop>
+            <source src="video.mp4" type="video/mp4">
+            <source src="video.ogg" type="video/ogg">
+        </video>
+        <!-- Youtube Video -->
+        <iframe src="https://www.youtube.com/watch?v=BwAOl1BXRx8" frameborder="0" width="420" height="315"></iframe>
         <h1>Welcome to CCA</h1>
         <!-- <h2>Welcome to CCA</h2>
         <h3>Welcome to CCA</h3>
@@ -42,5 +50,6 @@
                 <td>Web-development</td>
             </tr>
         </table>
+        <a href="contact.html">Visit Contact Page</a>
     </body>
 </html>
