Add HTML structure and CSS styling for Apple Watch display

--- a/card_html_css/index.html
+++ b/card_html_css/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to CCA</h1>
-    <h1 class="head1">Good Morning</h1>
-    <a href="">Home</a>
-    <a href="">About</a>
-    <a href="">Contact</a>
+    <div>
+        <img class="img1" src="watch.png" alt="Apple Watch">
+        <hr>
+        <h1>Apple Watch S3</h1>
+        <p>Rs.23000/-  <span class="price">Rs.30000/-</span></p>
+        <button class="btn1">Buy Now</button>
+    </div>
 </body>
 </html>
