--- a/display_flex/index.html
+++ b/display_flex/index.html
@@ -7,15 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="div1"></div>
-    <button class="btn1">Contact Us</button>
     <div id="divMain">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><h1>1</h1></div>
+        <div><h1>2</h1></div>
+        <div><h1>3</h1></div>
+        <div><h1>4</h1></div>
+        <div><h1>5</h1></div>
     </div>
-    <h1>Welcome to HTML & CSS</h1>
-    <p>We are learning CSS in our Web-development Course</p>
-    
 </body>
 </html>
